--- a/CLEAREAD-Newsletterv0.ipynb
+++ b/CLEAREAD-Newsletterv0.ipynb
@@ -2,43 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-16T15:05:20.068159Z",
-     "start_time": "2020-07-16T15:05:19.491306Z"
+     "end_time": "2020-07-14T06:59:35.890033Z",
+     "start_time": "2020-07-14T06:59:34.858808Z"
     }
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import re\n",
-    "import string\n",
-    "import pandas as pd\n",
-    "import nltk\n",
-    "from nltk.collocations import *\n",
-    "from pattern.en import lemma\n",
-    "import requests\n",
-    "import json\n",
-    "import time\n",
-    "import hashlib\n",
-    "import uuid\n",
-    "import csv\n",
-    "import phrasemachine\n",
-    "import time\n",
-    "from urllib.request import urlopen\n",
-    "from bs4 import BeautifulSoup\n",
-    "from urllib.request import Request\n",
-    "import difflib\n",
-    "from nltk.stem import WordNetLemmatizer \n",
-    "from wechatpy.client import WeChatClient\n",
-    "import random\n",
-    "import http.client\n",
-    "import stardict\n",
     "from stardict import LemmaDB\n",
     "lemma = LemmaDB()\n",
     "lemma.load('lemma.en.txt')\n",
-    "import urllib"
+    "import re\n",
+    "import pandas as pd\n"
    ]
   },
   {
@@ -46,23 +23,8 @@
    "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-16T15:05:20.076018Z",
-     "start_time": "2020-07-16T15:05:20.069999Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "with open(\"master_word_list.json\",'r') as load_f:\n",
-    "    master_word_dict = json.load(load_f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-07-16T15:05:21.909543Z",
-     "start_time": "2020-07-16T15:05:21.852695Z"
+     "end_time": "2020-07-14T07:26:22.603732Z",
+     "start_time": "2020-07-14T07:26:22.569811Z"
     }
    },
    "outputs": [],
@@ -85,30 +47,23 @@
     "    for line in fhandle:\n",
     "        highschool_list.append(line.lower().rstrip())  \n",
     "\n",
-    "middleschool_list = []\n",
-    "\n",
-    "with open('MiddleSchool_Vocab.txt','r',encoding='utf-8') as fhandle:\n",
-    "    for line in fhandle:\n",
-    "        middleschool_list.append(line.lower().rstrip())        \n",
-    "        \n",
-    "        \n",
     "elementary_list = []\n",
     "\n",
     "with open('Elementary_Vocab.txt','r',encoding='utf-8') as fhandle:\n",
     "    for line in fhandle:\n",
     "        elementary_list.append(line.lower().rstrip())\n",
     "\n",
-    "easy_word_set = set(CET4_list) | set(highschool_list) | set(elementary_list) | set(middleschool_list)\n",
+    "easy_word_set = set(CET4_list) | set(highschool_list) | set(elementary_list)\n",
     "easy_word_list = list(easy_word_set)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-16T15:05:23.683800Z",
-     "start_time": "2020-07-16T15:05:23.664851Z"
+     "end_time": "2020-07-14T07:16:53.567526Z",
+     "start_time": "2020-07-14T07:16:53.552566Z"
     }
    },
    "outputs": [],
@@ -126,11 +81,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-16T15:05:47.779756Z",
-     "start_time": "2020-07-16T15:05:24.112654Z"
+     "end_time": "2020-07-14T07:17:04.890627Z",
+     "start_time": "2020-07-14T07:16:54.522339Z"
     }
    },
    "outputs": [
@@ -155,19 +110,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Output v0"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-16T15:05:57.334624Z",
-     "start_time": "2020-07-16T15:05:47.795713Z"
+     "end_time": "2020-07-14T07:17:07.935936Z",
+     "start_time": "2020-07-14T07:17:04.894582Z"
     }
    },
    "outputs": [
@@ -175,7 +123,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter the name of the bookAnimal Farm\n"
+      "enter the name of the book7-15\n"
      ]
     }
    ],
@@ -185,34 +133,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-16T15:09:01.315652Z",
-     "start_time": "2020-07-16T15:05:58.031936Z"
+     "end_time": "2020-07-14T07:17:19.657786Z",
+     "start_time": "2020-07-14T07:17:07.938929Z"
     }
    },
    "outputs": [],
    "source": [
     "with open(bookname + \".txt\", 'r',encoding='utf-8') as file:\n",
-    "    text = file.read().rstrip()\n",
+    "    text = file.read().rstrip().lower()\n",
     "\n",
     "# remove puntuation\n",
-    "word_list_1 = re.findall(\"[a-zA-Z]+\\'?\\-?\\'?[a-zA-Z]+\", text)\n",
+    "word_list = re.findall(\"[a-z]+\\'?\\-?\\'?[a-z]+\", text)\n",
     "\n",
-    "\n",
-    "#remove names\n",
-    "name_list = []\n",
-    "for i in word_list_1:\n",
-    "    if i.startswith(('A','B','C','D','E','F','G','H','I','J','K','L','M','N','O','P','Q','R','S','T','U','V','W','X','Y','Z')) and i.lower() not in word_list_1:\n",
-    "        name_list.append(i)\n",
-    "\n",
-    "\n",
-    "word_list = []\n",
-    "for i in word_list_1:\n",
-    "    if i not in name_list:\n",
-    "        word_list.append(i.lower())\n",
-    "            \n",
     "#Lemmatization\n",
     "#LemmaDB can't lemma didn't or wouldn't, etc.\n",
     "lemma_word_list = []\n",
@@ -244,12 +179,6 @@
     "\n",
     "\n",
     "for i in range(0,len(word_count.index)):\n",
-    "    for j in list(master_word_dict.values()):\n",
-    "        if data.loc[i,'Vocabulary'] in j:\n",
-    "            data.loc[i,'Replicate'] = get_key(master_word_dict,j)\n",
-    "        else:\n",
-    "            pass\n",
-    "for i in range(0,len(word_count.index)):\n",
     "    try:\n",
     "        category = re.findall(\"[a-z]+\\-?[a-z]+\", stardict.loc[stardict['word']== data.loc[i,'Vocabulary'] ,'tag'].to_string())\n",
     "        if data.loc[i,'Vocabulary'] in GMAT_list:\n",
@@ -263,27 +192,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-16T09:40:50.709890Z",
-     "start_time": "2020-07-16T09:40:50.698959Z"
+     "end_time": "2020-07-14T07:26:25.392895Z",
+     "start_time": "2020-07-14T07:26:25.364973Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "lemma_CET4_list = []\n",
+    "for i in range(0,len(CET4_list)):\n",
+    "    lemma_word = lemma.get(CET4_list[i], reverse = True)\n",
+    "    if lemma_word == None:\n",
+    "        lemma_CET4_list.append(CET4_list[i])\n",
+    "    else:\n",
+    "        lemma_CET4_list.append(lemma_word[0])            \n",
+    "\n",
+    "lemma_highschool_list = []\n",
+    "for i in range(0,len(highschool_list)):\n",
+    "    lemma_word = lemma.get(highschool_list[i], reverse = True)\n",
+    "    if lemma_word == None:\n",
+    "        lemma_highschool_list.append(highschool_list[i])\n",
+    "    else:\n",
+    "        lemma_highschool_list.append(lemma_word[0])              \n",
+    "\n",
+    "lemma_elementary_list = []\n",
+    "for i in range(0,len(elementary_list)):\n",
+    "    lemma_word = lemma.get(elementary_list[i], reverse = True)\n",
+    "    if lemma_word == None:\n",
+    "        lemma_elementary_list.append(elementary_list[i])\n",
+    "    else:\n",
+    "        lemma_elementary_list.append(lemma_word[0])   \n",
+    "        \n",
+    "lemma_CET4_list = set(lemma_CET4_list) - set(lemma_highschool_list) - set(lemma_elementary_list)\n",
+    "        \n",
+    "CET4_appeared = []\n",
+    "for word in lemma_word_list:\n",
+    "    if word in lemma_CET4_list:\n",
+    "        CET4_appeared.append(word)\n",
+    "    else:\n",
+    "        continue   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-14T07:26:25.879974Z",
+     "start_time": "2020-07-14T07:26:25.874929Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "CET4_appeared = list(set(CET4_appeared))\n",
+    "fileObject = open(bookname + 'CET4.txt', 'w',encoding='utf-8')\n",
+    "for i in CET4_appeared:\n",
+    "    fileObject.write(i)\n",
+    "    fileObject.write('\\n')\n",
+    "fileObject.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-14T08:18:02.841652Z",
+     "start_time": "2020-07-14T08:18:02.836659Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['stairs']"
+       "['cues', 'cued', 'cueing']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lemma.get('stair', reverse = True)"
+    "lemma.get(\"cue\", reverse = False)"
    ]
   },
   {
@@ -291,7 +284,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "w"
+   ]
   }
  ],
  "metadata": {
@@ -316,19 +311,14 @@
    "base_numbering": 1,
    "nav_menu": {},
    "number_sections": true,
-   "sideBar": false,
+   "sideBar": true,
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {
-    "height": "603px",
-    "left": "1576px",
-    "top": "215px",
-    "width": "235.99px"
-   },
+   "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
