--- a/CLEAREAD-WechatCET4.ipynb
+++ b/CLEAREAD-WechatCET4.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-10T06:18:31.321561Z",
-     "start_time": "2020-07-10T06:18:27.754069Z"
+     "end_time": "2020-07-15T08:16:22.109758Z",
+     "start_time": "2020-07-15T08:16:22.089809Z"
     }
    },
    "outputs": [],
@@ -17,11 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-10T06:18:31.330506Z",
-     "start_time": "2020-07-10T06:18:31.324521Z"
+     "end_time": "2020-07-15T08:16:22.471097Z",
+     "start_time": "2020-07-15T08:16:22.449129Z"
     }
    },
    "outputs": [],
@@ -35,11 +35,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-10T06:21:13.010796Z",
-     "start_time": "2020-07-10T06:21:03.704049Z"
+     "end_time": "2020-07-16T03:48:55.826461Z",
+     "start_time": "2020-07-16T03:48:50.387506Z"
     }
    },
    "outputs": [
@@ -47,43 +47,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "please enter the name of the FC fileFC-A-1\n",
-      "please enter the counts of the images100\n"
+      "please enter the name of the FC fileCET-5\n",
+      "please enter the number of imgs100\n",
+      "please enter the start number1\n"
      ]
     }
    ],
    "source": [
     "filename = input('please enter the name of the FC file')\n",
-    "counts = input(\"please enter the counts of the images\")"
+    "counts = input('please enter the number of imgs')\n",
+    "start = input('please enter the start number')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-10T06:25:12.720072Z",
-     "start_time": "2020-07-10T06:21:13.890443Z"
+     "end_time": "2020-07-16T03:52:57.716250Z",
+     "start_time": "2020-07-16T03:48:56.588675Z"
     },
     "scrolled": false
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pic_bottom_url' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-71c057e21d79>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     41\u001b[0m     \u001b[0mpic_html\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcss\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     42\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 43\u001b[1;33m \u001b[0mpic_html\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"<img src=\"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mpic_bottom_url\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"\"\"data-type=\"jpg\" >\"\"\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     44\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     45\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'pic_bottom_url' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pic_word_link = []\n",
     "pic_defin_link = []\n",
-    "for i in range (1,int(counts)+1):\n",
+    "for i in range (int(start),int(start)+int(counts)):\n",
     "    if i % 2 != 0:\n",
     "        pic = \"D://\" + filename + \"/幻灯片\" + str(i) + \".JPG\"\n",
     "        pic_word_link.append(pic)\n",
@@ -126,12 +116,20 @@
     "\n",
     "\n",
     "#Output\n",
-    "fileObject = open('Wechat HTML.txt', 'w',encoding='utf-8')\n",
-    "fileObject.write(\"\"\"<p style=\"text-align: center;\"><img class=\"rich_pages __bg_gif\" data-cropselx1=\"0\" data-cropselx2=\"578\" data-cropsely1=\"0\" data-cropsely2=\"94\" data-ratio=\"0.16300940438871472\" data-s=\"300,640\" src=\"https://mmbiz.qpic.cn/mmbiz_gif/B0OT7bl3qeG68IvzLJWKglDFJxVibSULhxdK2JdtaGdjuiayKfx4NqZFHeDlk5qRdflN1rY4MuQOuUC3DibS2UfAg/640?wx_fmt=gif\" data-type=\"gif\" data-w=\"638\" style=\"margin-top: 15px;margin-bottom: 18px;width: 578px !important;height: auto !important;visibility: visible !important;\" width=\"578px\"></p>\"\"\")\n",
+    "fileObject = open('WechatCET4HTML.txt', 'w',encoding='utf-8')\n",
+    "fileObject.write(\"\"\"<p style=\"text-align: center;\"><img class=\"rich_pages __bg_gif\" data-cropselx1=\"0\" data-cropselx2=\"578\" data-cropsely1=\"0\" data-cropsely2=\"94\" data-ratio=\"0.16300940438871472\" data-s=\"300,640\" src=\"https://mmbiz.qpic.cn/mmbiz_gif/B0OT7bl3qeG68IvzLJWKglDFJxVibSULhxdK2JdtaGdjuiayKfx4NqZFHeDlk5qRdflN1rY4MuQOuUC3DibS2UfAg/640?wx_fmt=gif\" data-type=\"gif\" data-w=\"638\" style=\"margin-top: 15px;margin-bottom: 18px;width: 578px !important;height: auto !important;visibility: visible !important;\" width=\"578px\"></p>\n",
+    "<section style=\"margin-bottom: 0px; margin-top: 15px; max-width: 100%; min-height: 1em; font-family: -apple-system-font, BlinkMacSystemFont, &quot;Helvetica Neue&quot;, &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei UI&quot;, &quot;Microsoft YaHei&quot;, Arial, sans-serif; white-space: normal; background-color: rgb(255, 255, 255); text-align: center; letter-spacing: 0.54px; line-height: normal; box-sizing: border-box !important; overflow-wrap: break-word !important;\"><text><em><span style=\"max-width: 100%;color: rgb(136, 136, 136);letter-spacing: 0.54px;font-family: Optima-Regular, PingFangTC-light;font-size: 12px;overflow-wrap: break-word;box-sizing: border-box !important;word-wrap: break-word !important;\">Flashcard-单词卡&nbsp;用于单词记忆和单词自测<mpchecktext contenteditable=\"false\" id=\"1594443403911_0.011743322415164625\"></mpchecktext></span></em></text></section>\n",
+    "<section style=\"margin: 0px; max-width: 100%; min-height: 1em; font-family: -apple-system-font, BlinkMacSystemFont, &quot;Helvetica Neue&quot;, &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei UI&quot;, &quot;Microsoft YaHei&quot;, Arial, sans-serif; white-space: normal; background-color: rgb(255, 255, 255); text-align: center; letter-spacing: 0.54px; line-height: normal; box-sizing: border-box !important; overflow-wrap: break-word !important;\"><em><span style=\"max-width: 100%;color: rgb(136, 136, 136);letter-spacing: 0.54px;font-family: Optima-Regular, PingFangTC-light;font-size: 12px;overflow-wrap: break-word;box-sizing: border-box !important;word-wrap: break-word !important;\">点击单词图片 单词释义会短暂显示 可反复点击<mpchecktext contenteditable=\"false\" id=\"1594443403912_0.23759243427959098\"></mpchecktext></span></em></section>\n",
+    "<section style=\"margin: 0px; max-width: 100%; min-height: 1em; font-family: -apple-system-font, BlinkMacSystemFont, &quot;Helvetica Neue&quot;, &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei UI&quot;, &quot;Microsoft YaHei&quot;, Arial, sans-serif; white-space: normal; background-color: rgb(255, 255, 255); text-align: center; letter-spacing: 0.54px; line-height: normal; color: rgb(136, 136, 136); box-sizing: border-box !important; overflow-wrap: break-word !important;\"><span style=\"font-size: 12px;\">▼<mpchecktext contenteditable=\"false\" id=\"1594443403913_0.9069075398007242\"></mpchecktext></span></section>\n",
+    "\"\"\")\n",
     "fileObject.write('\\n')\n",
     "for i in pic_html:\n",
     "    fileObject.write(i)\n",
     "    fileObject.write('\\n')\n",
+    "                \n",
+    "fileObject.write(\"\"\"\n",
+    "<p><span style=\"color: rgb(136, 136, 136);font-family: -apple-system-font, BlinkMacSystemFont, &quot;Helvetica Neue&quot;, &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei UI&quot;, &quot;Microsoft YaHei&quot;, Arial, sans-serif;font-size: 12px;letter-spacing: 0.54px;text-align: center;background-color: rgb(255, 255, 255);\">▼ 阅读原文 回到<span style=\"font-family: &quot;Microsoft YaHei&quot;, Arial, sans-serif;font-size: 13px;text-align: start;background-color: rgb(255, 255, 255);\">「自习室」</span>查看其他四级单词卡</span></p>\n",
+    "\"\"\")\n",
     "fileObject.close()\n"
    ]
   },
