--- a/CLEAREAD-WechatNotebookUpload.ipynb
+++ b/CLEAREAD-WechatNotebookUpload.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-10T07:04:24.784759Z",
-     "start_time": "2020-07-10T07:04:24.434695Z"
+     "end_time": "2020-07-16T08:19:36.691042Z",
+     "start_time": "2020-07-16T08:19:36.629209Z"
     }
    },
    "outputs": [],
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-10T07:04:24.792736Z",
-     "start_time": "2020-07-10T07:04:24.786752Z"
+     "end_time": "2020-07-16T08:19:37.067700Z",
+     "start_time": "2020-07-16T08:19:37.029801Z"
     }
    },
    "outputs": [],
@@ -34,11 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-10T07:04:27.105587Z",
-     "start_time": "2020-07-10T07:04:25.071992Z"
+     "end_time": "2020-07-16T08:20:26.970944Z",
+     "start_time": "2020-07-16T08:20:25.463800Z"
     }
    },
    "outputs": [],
@@ -49,17 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-10T07:04:27.117554Z",
-     "start_time": "2020-07-10T07:04:27.107550Z"
+     "end_time": "2020-07-16T08:20:27.722822Z",
+     "start_time": "2020-07-16T08:20:27.709858Z"
     }
    },
    "outputs": [],
    "source": [
     "notebook_html = \"\"\"<p style=\"text-align: center;\"><img class=\"rich_pages\" data-cropselx1=\"0\" data-cropselx2=\"578\" data-cropsely1=\"0\" data-cropsely2=\"94\" data-ratio=\"0.16300940438871472\" data-s=\"300,640\" src=\"https://mmbiz.qpic.cn/mmbiz_gif/B0OT7bl3qeG68IvzLJWKglDFJxVibSULhxdK2JdtaGdjuiayKfx4NqZFHeDlk5qRdflN1rY4MuQOuUC3DibS2UfAg/640?wx_fmt=gif\" data-type=\"gif\" data-w=\"638\" style=\"margin-top: 15px;width: 578px;height: 94px;margin-bottom: 18px;\"></p>\n",
-    "<p style=\"text-align: center;\"><span style=\"letter-spacing: 2px;font-size: 13px;font-family: STZhongsong;color: rgb(17, 17, 17);\">(公众号内回复\"原则\" 获取原版书下载链接)<mpchecktext contenteditable=\"false\" id=\"1594299927924_0.4886022771960734\"></mpchecktext></span></p>\n",
+    "<p style=\"margin-bottom: 0px; margin-top: 0px; max-width: 100%; min-height: 1em; font-family: -apple-system-font, BlinkMacSystemFont, &quot;Helvetica Neue&quot;, &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei UI&quot;, &quot;Microsoft YaHei&quot;, Arial, sans-serif; white-space: normal; background-color: rgb(255, 255, 255); text-align: center; letter-spacing: 0.54px; line-height: normal; box-sizing: border-box !important; overflow-wrap: break-word !important;\"><text><em><span style=\"max-width: 100%;color: rgb(136, 136, 136);letter-spacing: 0.54px;font-family: Optima-Regular, PingFangTC-light;font-size: 12px;overflow-wrap: break-word;box-sizing: border-box !important;word-wrap: break-word !important;\">&#8203;公众号内回复\"原则\" 获取原版书下载链接</span></em></text></p>\n",
     "<p style=\"text-align: left; margin-left: 20px; margin-top: 15px; margin-bottom: 15px;\"><span style=\"letter-spacing: 2px;\"><strong><span style=\"color: rgb(107, 46, 15);\">&#8203;▍内容简介<mpchecktext contenteditable=\"false\" id=\"1593610357970_0.39864090596811796\"></mpchecktext></span></strong></span><strong><span style=\"color: rgb(107, 46, 15);letter-spacing: 2px;\"><strong style=\"text-align: left;white-space: normal;\"><span style=\"color: rgb(107, 46, 15);\"></span></strong></span></strong><span style=\"color: rgb(107, 46, 15);\"><br></span></p>\n",
     "<p style=\"line-height: 1.75em; margin-left: 20px; margin-right: 20px; text-indent: 0em; text-align: justify; margin-bottom: 5px;\"><span style=\"letter-spacing: 2px;\"><span style=\"font-size: 13px;font-family: STZhongsong;color: rgb(17, 17, 17);\">一岁的哈利</span><span style=\"font-size: 13px;font-family: 微软雅黑, sans-serif;color: rgb(17, 17, 17);\">・</span><span style=\"font-size: 13px;font-family: STZhongsong;color: rgb(17, 17, 17);\">波特失去父母后，神秘地出现在姨父姨妈家的门前，度过了寄人篱下、极其痛苦的十年。<mpchecktext contenteditable=\"false\" id=\"1593610357971_0.9702775024198502\"></mpchecktext></span></span></p>\n",
     "<p style=\"line-height: 1.75em; margin-left: 20px; margin-right: 20px; text-indent: 0em; text-align: justify; margin-bottom: 5px;\"><span style=\"letter-spacing: 2px;\"><span style=\"font-size: 13px;font-family: STZhongsong;color: rgb(17, 17, 17);\">生活</span></span><span style=\"color: rgb(17, 17, 17);font-family: STZhongsong;font-size: 13px;letter-spacing: 2px;text-indent: 0em;\">在</span><span style=\"color: rgb(17, 17, 17);font-family: STZhongsong;font-size: 13px;letter-spacing: 2px;text-indent: 0em;\">他十一岁生日那天发生了变化，信使猫头鹰带来了一封神秘的信：<mpchecktext contenteditable=\"false\" id=\"1593610357972_0.554743536010708\"></mpchecktext></span><span style=\"color: rgb(17, 17, 17);font-family: STZhongsong;font-size: 13px;letter-spacing: 2px;text-indent: 0em;\">邀请哈利去一个会使他永远难忘、不可思议的地方——霍格沃茨魔法学校。<mpchecktext contenteditable=\"false\" id=\"1593610357973_0.2932260322692204\"></mpchecktext></span></p>\n",
@@ -78,16 +78,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-10T07:04:27.156418Z",
-     "start_time": "2020-07-10T07:04:27.121512Z"
+     "end_time": "2020-07-16T08:20:29.193919Z",
+     "start_time": "2020-07-16T08:20:29.184943Z"
     }
    },
    "outputs": [],
    "source": [
-    "fileObject = open('WechatNotebookHTML.txt', 'w',encoding='utf-8')\n",
+    "fileObject = open('WechatLibraryNBHTML.txt', 'w',encoding='utf-8')\n",
     "fileObject.write(notebook_html)\n",
     "fileObject.close()"
    ]
