--- a/CLEAREAD-v3.ipynb
+++ b/CLEAREAD-v3.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-09T15:22:19.108487Z",
-     "start_time": "2020-07-09T15:22:06.797516Z"
+     "end_time": "2020-07-15T04:51:16.050211Z",
+     "start_time": "2020-07-15T04:51:14.380673Z"
     }
    },
    "outputs": [],
@@ -43,23 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-09T15:22:38.202609Z",
-     "start_time": "2020-07-09T15:22:19.110482Z"
+     "end_time": "2020-07-15T04:51:47.923013Z",
+     "start_time": "2020-07-15T04:51:18.308178Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\apps\\Anaconda\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3063: DtypeWarning: Columns (11) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "GMAT_list = []\n",
     "\n",
@@ -81,11 +72,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-09T15:23:00.092090Z",
-     "start_time": "2020-07-09T15:22:38.234525Z"
+     "end_time": "2020-07-17T04:06:34.705671Z",
+     "start_time": "2020-07-17T04:06:33.038151Z"
     }
    },
    "outputs": [
@@ -93,7 +84,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter the name of the v2fileTender is the Nightvocabularycounts_v2\n"
+      "enter the name of the v2fileAnimal Farmvocabularycounts_v2\n"
      ]
     }
    ],
@@ -103,11 +94,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-09T15:43:41.911718Z",
-     "start_time": "2020-07-09T15:34:56.890722Z"
+     "end_time": "2020-07-17T04:18:15.916879Z",
+     "start_time": "2020-07-17T04:06:36.001520Z"
     }
    },
    "outputs": [
@@ -115,47 +106,121 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "chauffeur\n",
-      "lausanne\n",
-      "mediterranean\n",
-      "consulate\n",
-      "quirinal\n",
-      "rue\n",
-      "funicular\n",
-      "monte\n",
-      "formidable\n",
-      "detach\n",
-      "phonograph\n",
-      "valet\n",
-      "chasseur\n",
-      "buffalo\n",
-      "excelsior\n",
-      "slant\n",
-      "belittle\n",
-      "psychiatrist\n",
-      "arc\n",
-      "apologetically\n",
-      "monocle\n",
-      "menace\n",
-      "peignoir\n",
-      "facetious\n",
-      "gendarme\n",
-      "herald\n",
-      "frantic\n",
-      "espadrille\n",
-      "sleigh\n",
-      "reiterate\n",
-      "stunt\n",
-      "petit\n",
-      "metallic\n",
-      "bizarre\n",
-      "exigent\n",
-      "mingle\n",
-      "cavalry\n",
-      "neurosis\n",
-      "alp\n",
-      "sanitarium\n",
-      "ready for chinese translation\n"
+      "windmill\n",
+      "clover\n",
+      "hoof\n",
+      "stall\n",
+      "ration\n",
+      "cowshed\n",
+      "pasture\n",
+      "orchard\n",
+      "fling\n",
+      "spite\n",
+      "bleat\n",
+      "trotter\n",
+      "expulsion\n",
+      "quarry\n",
+      "pellet\n",
+      "growl\n",
+      "cockerel\n",
+      "barley\n",
+      "gallop\n",
+      "fro\n",
+      "wound\n",
+      "perch\n",
+      "whisk\n",
+      "snuff\n",
+      "thou\n",
+      "hind\n",
+      "onward\n",
+      "toil\n",
+      "maxim\n",
+      "boar\n",
+      "knoll\n",
+      "machinery\n",
+      "skull\n",
+      "boulder\n",
+      "decree\n",
+      "procure\n",
+      "oat\n",
+      "flagstaff\n",
+      "mane\n",
+      "dynamo\n",
+      "overthrow\n",
+      "mare\n",
+      "simultaneously\n",
+      "uproar\n",
+      "thresh\n",
+      "inscribe\n",
+      "raven\n",
+      "lash\n",
+      "hayfield\n",
+      "duckling\n",
+      "flutter\n",
+      "tread\n",
+      "knacker\n",
+      "shrill\n",
+      "hoist\n",
+      "mash\n",
+      "suppress\n",
+      "ready for chinese translation\n",
+      "风车\n",
+      "三叶草\n",
+      "蹄\n",
+      "失速\n",
+      "定额\n",
+      "牛棚\n",
+      "牧场\n",
+      "果园\n",
+      "猛扔\n",
+      "怨恨\n",
+      "惨叫\n",
+      "小跑\n",
+      "驱逐\n",
+      "采石场\n",
+      "弹丸\n",
+      "咆哮\n",
+      "公鸡\n",
+      "大麦\n",
+      "驰骋\n",
+      "从\n",
+      "伤口\n",
+      "鲈鱼\n",
+      "搅拌\n",
+      "鼻烟\n",
+      "你\n",
+      "后面的\n",
+      "向前的\n",
+      "辛苦工作\n",
+      "格言\n",
+      "野猪\n",
+      "小丘\n",
+      "机械\n",
+      "颅骨\n",
+      "巨石\n",
+      "法令\n",
+      "采购\n",
+      "燕麦\n",
+      "旗杆\n",
+      "鬃毛\n",
+      "发电机\n",
+      "推翻\n",
+      "母马\n",
+      "同时\n",
+      "喧嚣\n",
+      "脱粒\n",
+      "题词\n",
+      "掠夺\n",
+      "睫毛\n",
+      "海菲尔德\n",
+      "小鸭\n",
+      "颤振\n",
+      "踩\n",
+      "骗子\n",
+      "尖叫\n",
+      "升起\n",
+      "捣碎\n",
+      "抑制\n"
      ]
     }
    ],
@@ -167,7 +232,7 @@
     "app_id = '491e882b'\n",
     "app_key = 'a0b004ca6b5f7f4e820832f3dc934355'\n",
     "\n",
-    "word_pron_char_defin_cate=[]\n",
+    "word_pron_char_cate=[]\n",
     "for i in reader:\n",
     "    try:\n",
     "        category = re.findall(\"[a-z]+\\-?[a-z]+\", df.loc[df['word']== i[0] ,'tag'].to_string())\n",
@@ -185,8 +250,7 @@
     "            r = requests.get(url, headers = {'app_id': app_id, 'app_key': app_key})\n",
     "            pron = r.json()[\"results\"][0]['lexicalEntries'][0]['entries'][0]['pronunciations'][0]['phoneticSpelling']\n",
     "            char = r.json()[\"results\"][0]['lexicalEntries'][0]['lexicalCategory']['text']\n",
-    "            defin = r.json()[\"results\"][0]['lexicalEntries'][0]['entries'][0]['senses'][0]['definitions'][0]\n",
-    "            word_pron_char_defin_cate.append([i[0],'/'+pron+'/',char,defin,cate])\n",
+    "            word_pron_char_cate.append([i[0],'/'+pron+'/',char,cate])\n",
     "            print(word_id)\n",
     "            time.sleep(10)\n",
     "        except KeyError :\n",
@@ -196,7 +260,7 @@
     "        pass\n",
     "print('ready for chinese translation')\n",
     "\n",
-    "for i in word_pron_char_defin_cate:\n",
+    "for i in word_pron_char_cate:\n",
     "    if i[2] == 'Noun':\n",
     "        i[2] = 'n.'\n",
     "    if i[2] == 'Adjective':\n",
@@ -216,8 +280,8 @@
     "fromLang = 'en'   #原文语种\n",
     "toLang = 'zh'   #译文语种\n",
     "\n",
-    "word_pron_char_defin_cate_cn = []\n",
-    "for i in word_pron_char_defin_cate:\n",
+    "word_pron_char_cate_cn = []\n",
+    "for i in word_pron_char_cate:\n",
     "    salt = random.randint(32768, 65536)\n",
     "    sign = appid + i[0] + str(salt) + secretKey\n",
     "    sign = hashlib.md5(sign.encode()).hexdigest()\n",
@@ -233,115 +297,14 @@
     "        result = json.loads(result_all)['trans_result'][0]['dst']\n",
     "        i.append(result)\n",
     "        print(result)\n",
-    "        word_pron_char_defin_cate_cn.append(i)\n",
+    "        word_pron_char_cate_cn.append(i)\n",
     "\n",
-    "\n",
+    "    \n",
     "    except Exception as e:\n",
     "        pass\n",
     "\n",
     "fileObject = open(filename + '_v3.txt', 'w',encoding='utf-8')\n",
-    "for i in word_pron_char_defin_cate_cn:\n",
-    "    for j in i:\n",
-    "        fileObject.write(j)\n",
-    "        fileObject.write(' ')\n",
-    "    fileObject.write('\\n')\n",
-    "fileObject.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-07-09T16:02:09.143958Z",
-     "start_time": "2020-07-09T16:01:55.063576Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "司机\n",
-      "洛桑\n",
-      "地中海\n",
-      "领事馆\n",
-      "奇里纳尔\n",
-      "吕\n",
-      "索\n",
-      "蒙特\n",
-      "可怕的\n",
-      "分离\n",
-      "留声机\n",
-      "男仆\n",
-      "查瑟尔\n",
-      "水牛\n",
-      "精益求精\n",
-      "倾斜\n",
-      "轻视\n",
-      "精神病医生\n",
-      "弧\n",
-      "抱歉地\n",
-      "单眼镜\n",
-      "威胁\n",
-      "皮诺伊尔\n",
-      "滑稽的\n",
-      "宪兵\n",
-      "先驱\n",
-      "疯狂的\n",
-      "西班牙\n",
-      "雪橇\n",
-      "重申\n",
-      "特技\n",
-      "小矮子\n",
-      "金属的\n",
-      "奇怪的\n",
-      "急迫的\n",
-      "混在一起\n",
-      "骑兵\n",
-      "神经症\n",
-      "阿尔卑斯山\n",
-      "疗养院\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Baidu API for EN-CN Translate\n",
-    "appid = '20200627000507736'  # 填写你的appid\n",
-    "secretKey = 'G3ghonyD9dfI39NnFtGN'  # 填写你的密钥\n",
-    "\n",
-    "httpClient = None\n",
-    "myurl = '/api/trans/vip/translate'\n",
-    "\n",
-    "fromLang = 'en'   #原文语种\n",
-    "toLang = 'zh'   #译文语种\n",
-    "\n",
-    "word_pron_char_defin_cate_cn = []\n",
-    "for i in word_pron_char_defin_cate:\n",
-    "    salt = random.randint(32768, 65536)\n",
-    "    sign = appid + i[0] + str(salt) + secretKey\n",
-    "    sign = hashlib.md5(sign.encode()).hexdigest()\n",
-    "    myurl = myurl + '?appid=' + appid + '&q=' + urllib.parse.quote(i[0]) + '&from=' + fromLang + '&to=' + toLang + '&salt=' + str(salt) + '&sign=' + sign\n",
-    "\n",
-    "    try:\n",
-    "        httpClient = http.client.HTTPConnection('api.fanyi.baidu.com')\n",
-    "        httpClient.request('GET', myurl)\n",
-    "\n",
-    "        # response是HTTPResponse对象\n",
-    "        response = httpClient.getresponse()\n",
-    "        result_all = response.read().decode(\"utf-8\")\n",
-    "        result = json.loads(result_all)['trans_result'][0]['dst']\n",
-    "        i.append(result)\n",
-    "        print(result)\n",
-    "        word_pron_char_defin_cate_cn.append(i)\n",
-    "\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        pass\n",
-    "    continue\n",
-    "\n",
-    "fileObject = open(filename + '_v3.txt', 'w',encoding='utf-8')\n",
-    "for i in word_pron_char_defin_cate_cn:\n",
+    "for i in word_pron_char_cate_cn:\n",
     "    for j in i:\n",
     "        fileObject.write(j)\n",
     "        fileObject.write(' ')\n",
