--- a/CLEAREAD-WechatFlashcardUpload.ipynb
+++ b/CLEAREAD-WechatFlashcardUpload.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-10T07:03:19.758516Z",
-     "start_time": "2020-07-10T07:03:19.231893Z"
+     "end_time": "2020-07-16T08:20:36.022631Z",
+     "start_time": "2020-07-16T08:20:35.956808Z"
     }
    },
    "outputs": [],
@@ -17,11 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-10T07:03:20.017793Z",
-     "start_time": "2020-07-10T07:03:20.010811Z"
+     "end_time": "2020-07-16T08:20:36.332419Z",
+     "start_time": "2020-07-16T08:20:36.301503Z"
     }
    },
    "outputs": [],
@@ -35,11 +35,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-10T07:04:12.875973Z",
-     "start_time": "2020-07-10T07:03:21.255482Z"
+     "end_time": "2020-07-16T08:20:46.845059Z",
+     "start_time": "2020-07-16T08:20:36.726834Z"
     }
    },
    "outputs": [
@@ -47,8 +47,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "please enter the name of the FC fileFC\n",
-      "please enter the counts of the images88\n"
+      "please enter the name of the FC fileFC-1\n",
+      "please enter the counts of the images108\n"
      ]
     }
    ],
@@ -59,11 +59,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-10T07:07:53.260897Z",
-     "start_time": "2020-07-10T07:04:16.483294Z"
+     "end_time": "2020-07-16T08:25:14.484636Z",
+     "start_time": "2020-07-16T08:20:47.341731Z"
     }
    },
    "outputs": [],
@@ -107,7 +107,7 @@
     "\n",
     "#Add Wechat Title\n",
     "wechat_title=\"\"\"<p style=\"text-align: center;\"><img class=\"rich_pages\" data-cropselx1=\"0\" data-cropselx2=\"578\" data-cropsely1=\"0\" data-cropsely2=\"94\" data-ratio=\"0.16300940438871472\" data-s=\"300,640\" src=\"https://mmbiz.qpic.cn/mmbiz_gif/B0OT7bl3qeG68IvzLJWKglDFJxVibSULhxdK2JdtaGdjuiayKfx4NqZFHeDlk5qRdflN1rY4MuQOuUC3DibS2UfAg/640?wx_fmt=gif\" data-type=\"gif\" data-w=\"638\" style=\"margin-top: 15px;width: 578px;height: 94px;margin-bottom: 18px;\"></p>\n",
-    "<p style=\"text-align: center;\"><span style=\"letter-spacing: 2px;font-size: 13px;font-family: STZhongsong;color: rgb(17, 17, 17);\">(公众号内回复\"原则\" 获取原版书下载链接)<mpchecktext contenteditable=\"false\" id=\"1594299927924_0.4886022771960734\"></mpchecktext></span></p>\n",
+    "<p style=\"margin-bottom: 0px; margin-top: 0px; max-width: 100%; min-height: 1em; font-family: -apple-system-font, BlinkMacSystemFont, &quot;Helvetica Neue&quot;, &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei UI&quot;, &quot;Microsoft YaHei&quot;, Arial, sans-serif; white-space: normal; background-color: rgb(255, 255, 255); text-align: center; letter-spacing: 0.54px; line-height: normal; box-sizing: border-box !important; overflow-wrap: break-word !important;\"><text><em><span style=\"max-width: 100%;color: rgb(136, 136, 136);letter-spacing: 0.54px;font-family: Optima-Regular, PingFangTC-light;font-size: 12px;overflow-wrap: break-word;box-sizing: border-box !important;word-wrap: break-word !important;\">&#8203;公众号内回复\"原则\" 获取原版书下载链接</span></em></text></p>\n",
     "<p style=\"text-align: left; margin-left: 20px; margin-top: 15px; margin-bottom: 15px;\"><span style=\"letter-spacing: 2px;\"><strong><span style=\"color: rgb(107, 46, 15);\">&#8203;▍内容简介<mpchecktext contenteditable=\"false\" id=\"1593610357970_0.39864090596811796\"></mpchecktext></span></strong></span><strong><span style=\"color: rgb(107, 46, 15);letter-spacing: 2px;\"><strong style=\"text-align: left;white-space: normal;\"><span style=\"color: rgb(107, 46, 15);\"></span></strong></span></strong><span style=\"color: rgb(107, 46, 15);\"><br></span></p>\n",
     "<p style=\"line-height: 1.75em; margin-left: 20px; margin-right: 20px; text-indent: 0em; text-align: justify; margin-bottom: 5px;\"><span style=\"letter-spacing: 2px;\"><span style=\"font-size: 13px;font-family: STZhongsong;color: rgb(17, 17, 17);\">一岁的哈利</span><span style=\"font-size: 13px;font-family: 微软雅黑, sans-serif;color: rgb(17, 17, 17);\">・</span><span style=\"font-size: 13px;font-family: STZhongsong;color: rgb(17, 17, 17);\">波特失去父母后，神秘地出现在姨父姨妈家的门前，度过了寄人篱下、极其痛苦的十年。<mpchecktext contenteditable=\"false\" id=\"1593610357971_0.9702775024198502\"></mpchecktext></span></span></p>\n",
     "<p style=\"line-height: 1.75em; margin-left: 20px; margin-right: 20px; text-indent: 0em; text-align: justify; margin-bottom: 5px;\"><span style=\"letter-spacing: 2px;\"><span style=\"font-size: 13px;font-family: STZhongsong;color: rgb(17, 17, 17);\">生活</span></span><span style=\"color: rgb(17, 17, 17);font-family: STZhongsong;font-size: 13px;letter-spacing: 2px;text-indent: 0em;\">在</span><span style=\"color: rgb(17, 17, 17);font-family: STZhongsong;font-size: 13px;letter-spacing: 2px;text-indent: 0em;\">他十一岁生日那天发生了变化，信使猫头鹰带来了一封神秘的信：<mpchecktext contenteditable=\"false\" id=\"1593610357972_0.554743536010708\"></mpchecktext></span><span style=\"color: rgb(17, 17, 17);font-family: STZhongsong;font-size: 13px;letter-spacing: 2px;text-indent: 0em;\">邀请哈利去一个会使他永远难忘、不可思议的地方——霍格沃茨魔法学校。<mpchecktext contenteditable=\"false\" id=\"1593610357973_0.2932260322692204\"></mpchecktext></span></p>\n",
@@ -125,7 +125,7 @@
     "#Format HTML language\n",
     "for i in range(0,(int(counts)//2)):\n",
     "    css = \"\"\"<section data-width=\"100%\" style=\"display: inline-block; width: 100%; font-size: 0px; background-image: url(&quot;\"\"\" + pic_defin_url[i] + \"\"\"&quot;); background-size: cover; vertical-align: top; background-attachment: scroll; box-sizing: border-box; text-align: center; background-position: 0% 0%; background-repeat: no-repeat; max-width: 100% !important;\">\n",
-    "<svg data-width=\"100%\" enable-background=\"new 0 0 1067 212\" space=\"preserve\" style=\"display: inline-block;outline: none;width: 100%;margin-top: -1px;border-width: initial;border-style: none;border-color: initial;vertical-align: top;background-position: 0% 0%;background-repeat: no-repeat;background-size: 100%;background-attachment: scroll;background-image: url(&quot;\"\"\" + pic_word_url[i] + \"\"\"&quot;);-webkit-tap-highlight-color: transparent;\" viewBox=\"0 0 1067 212\" x=\"0px\" xml=\"\" y=\"0px\">\n",
+    "<svg data-width=\"100%\" enable-background=\"new 0 0 1067 189\" space=\"preserve\" style=\"display: inline-block;outline: none;width: 100%;margin-top: -1px;border-width: initial;border-style: none;border-color: initial;vertical-align: top;background-position: 0% 0%;background-repeat: no-repeat;background-size: 100%;background-attachment: scroll;background-image: url(&quot;\"\"\" + pic_word_url[i] + \"\"\"&quot;);-webkit-tap-highlight-color: transparent;\" viewBox=\"0 0 1067 189\" x=\"0px\" xml=\"\" y=\"0px\">\n",
     "<set attributeName=\"visibility\" from=\"visible\" to=\"hidden\" begin=\"click+0.3\"></set>\n",
     "<animate attributeName=\"opacity\" begin=\"click\" dur=\"0.2s\" values=\"1;0\" restart=\"never\" fill=\"freeze\">\n",
     "</animate>\n",
@@ -147,7 +147,7 @@
     "<p><span style=\"color: rgb(136, 136, 136);font-family: -apple-system-font, BlinkMacSystemFont, &quot;Helvetica Neue&quot;, &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei UI&quot;, &quot;Microsoft YaHei&quot;, Arial, sans-serif;font-size: 12px;letter-spacing: 0.54px;text-align: center;background-color: rgb(255, 255, 255);\">▼ 阅读原文 保存Notebook-单词本长图</span></p>\"\"\"\n",
     "pic_html.append(wechat_bottom)\n",
     "#Output\n",
-    "fileObject = open('Wechat HTML.txt', 'w',encoding='utf-8')\n",
+    "fileObject = open('WechatLibraryFCHTML.txt', 'w',encoding='utf-8')\n",
     "for i in pic_html:\n",
     "    fileObject.write(i)\n",
     "    fileObject.write('\\n')\n",
